# prov2ld

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: from_yprov4ml.json  test_comprehensive.json
src/: __ld2viz__.py  __prov2ld__.py  ld2viz.py
